app/assets/stylesheets/application.scss
@import "bootstrap";
@import "gritter";

/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
}

/* Custom default button */
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #fff;
  border: .05rem solid #fff;
}


/*
 * Base structure
 */

html,
body {
  height: 100%;
  font-family: 'Krub', sans-serif;
}

body {
  display: -ms-flexbox;
  display: flex;
  color: #fff;
  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
}

h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6 {
  font-family: 'Mukta Mahee', sans-serif;
}

.cover-container {
  max-width: 65em;
}


/*
 * Header
 */

.masthead {
  margin-bottom: 2rem;
  width: 55rem;
  position: relative;
  left: 63px;
}

.masthead-brand {
  margin-bottom: 0;
}

.nav-masthead .nav-link {
  padding: .25rem 0;
  font-weight: 700;
  color: rgba(255, 255, 255, .5);
  background-color: transparent;
  border-bottom: .25rem solid transparent;  
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  border-bottom-color: rgba(255, 255, 255, .25);
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
}

.nav-masthead .active {
  color: #fff;
  border-bottom-color: #fff;
}

@media (min-width: 48em) {
  .masthead-brand {
    float: left;
  }
  .nav-masthead {
    float: right;
  }
}


/*
 * Cover
 */

.cover {
  padding: 0 1.5rem;
  text-align: center
}
.cover .btn-lg {
  padding: .75rem 1.25rem;
  font-weight: 700;
}


/*
 * Footer
 */

.mastfoot {
  color: rgba(255, 255, 255, .5);
}

p {
  text-align: center;
}

/*
 * Custom
 */

#my-p-fix2 {
  text-align: left;
}

.card-body {
  color: black;
}

.auth-links a {
  color: black;
}

.register-text {
  text-align: right;
}

.login > .card {
  width: 22rem;
  margin: 0 auto;
  float: none;
}

.app-nav span {
  margin-left: 10px;
  margin-right: 10px;
}

#background {
  position: fixed;
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  z-index: -100;
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  background: image-url('home_bg.png') no-repeat;
  background-size: cover;
}

.app-footer {
  color: white;
}

.tech-news {
  color: black;
  margin: 20px;
}

.tech-news a {
  color: orange;
}

.tech-news > .card {
  padding: 30px;
}

.tech-title {
  margin-top: 15px;
}

.app-card-container {
  color: black;
}

.app-card-container > .card {
  text-align: center;
  font-size: 1.25rem;
  padding: 20px;
}

#contact-page-headers {
  margin-top: 30px;
}

.app-card-container a {
  color: green;
}

.card-block {
  margin-top: 7px;
  margin-bottom: 7px;
}

#collapse-buttons {
  margin-top: 45px;
}

.skill {
  margin-top: 8px;
  margin-bottom: 8px;
}

.home-style {
  text-shadow: 0.4px 0.4px;
}

.align-left {
  text-align: left;
}

.about-descrip {
  font-size: 0.9em;
}


/* Pop hover.css */
@-webkit-keyframes hvr-pop {
  50% {
    -webkit-transform: scale(1.2);
    transform: scale(1.2);
  }
}
@keyframes hvr-pop {
  50% {
    -webkit-transform: scale(1.2);
    transform: scale(1.2);
  }
}
.hvr-pop {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
}
.hvr-pop:hover, .hvr-pop:focus, .hvr-pop:active {
  -webkit-animation-name: hvr-pop;
  animation-name: hvr-pop;
  -webkit-animation-duration: 0.3s;
  animation-duration: 0.3s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}

